--- a/pre/scss/components/_font.scss
+++ b/pre/scss/components/_font.scss
@@ -70,27 +70,33 @@ a {
         font-size: size(30);
     }
 
-    h1 {
+    h1,
+    .h1 {
         font-size: size(24);
     }
 
-    h2 {
+    h2,
+    .h2 {
         font-size: size(20);
     }
 
-    h3 {
+    h3,
+    .h3 {
         font-size: size(18);
     }
 
-    h4 {
+    h4,
+    .h4 {
         font-size: size(16);
     }
 
-    h5 {
+    h5,
+    .h5 {
         font-size: size(15);
     }
 
-    h6 {
+    h6,
+    .h6 {
         font-size: size(14);
     }
 
