--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -3313,9 +3313,16 @@ body {
 #mainPage #game .game-detail .content .odd-n-bet .odds label {
   display: flex;
   align-items: flex-start;
+  font-size: 1.125rem;
+  line-height: 1.5;
+}
+@media (max-width: 1024px) {
+  #mainPage #game .game-detail .content .odd-n-bet .odds label {
+    font-size: 0.9375rem;
+  }
 }
 #mainPage #game .game-detail .content .odd-n-bet .odds label i {
-  transform: translate(0, 0.375rem);
+  transform: translate(0, 0.25rem);
 }
 #mainPage #game .game-detail .content .odd-n-bet .odds h3 {
   margin: 1.5rem 0;
@@ -3487,9 +3494,6 @@ body {
   }
   #mainPage #game .game-detail .content .odd-n-bet .odds {
     order: 2;
-  }
-  #mainPage #game .game-detail .content .odd-n-bet .odds label i {
-    transform: translate(0, 0.125rem);
   }
   #mainPage #game .game-detail .content .desc {
     order: 2;
