--- a/pre/scss/layout/_header.scss
+++ b/pre/scss/layout/_header.scss
@@ -123,15 +123,6 @@ header {
                     content: '\e900';
                 }
             }
-
-            &.active {
-                button {
-                    &::after {
-                        font-family: 'Icomoon';
-                        content: '\e903';
-                    }
-                }
-            }
         }
     }
 
@@ -177,6 +168,17 @@ header {
     }
 
 
+    @media (min-width:1281px) {
+        .login {
+            .admin:hover {
+                button::after {
+                    content: '\e903';
+                }
+            }
+        }
+    }
+
+
     // laptop ~ 1280
     @include max-to(laptop) {
         padding: size(12) size(16);
@@ -218,6 +220,17 @@ header {
                 padding: size(10) size(20);
                 border: none !important;
                 line-height: 1 !important;
+            }
+
+            .admin {
+                &.active {
+                    button {
+                        &::after {
+                            font-family: 'Icomoon';
+                            content: '\e903';
+                        }
+                    }
+                }
             }
         }
 
