--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -1044,15 +1044,22 @@ body {
   z-index: 2;
   border-radius: 6.25rem;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: -1.375rem;
+  cursor: pointer;
 }
 #mainPage .swiper-button-prev:hover, #mainPage .swiper-button-next:hover {
   background-color: rgba(255, 255, 255, 0.15);
 }
-#mainPage .swiper-button-prev[disabled], #mainPage .swiper-button-prev.slick-disabled, #mainPage .swiper-button-next[disabled], #mainPage .swiper-button-next.slick-disabled {
+#mainPage .swiper-button-prev[disabled], #mainPage .swiper-button-prev.slick-disabled, #mainPage .swiper-button-prev.swiper-button-disabled, #mainPage .swiper-button-next[disabled], #mainPage .swiper-button-next.slick-disabled, #mainPage .swiper-button-next.swiper-button-disabled {
+  opacity: 0.35;
+  pointer-events: none;
   color: #3a3a3a;
   cursor: default;
 }
-#mainPage .swiper-button-prev[disabled]:hover, #mainPage .swiper-button-prev.slick-disabled:hover, #mainPage .swiper-button-next[disabled]:hover, #mainPage .swiper-button-next.slick-disabled:hover {
+#mainPage .swiper-button-prev[disabled]:hover, #mainPage .swiper-button-prev.slick-disabled:hover, #mainPage .swiper-button-prev.swiper-button-disabled:hover, #mainPage .swiper-button-next[disabled]:hover, #mainPage .swiper-button-next.slick-disabled:hover, #mainPage .swiper-button-next.swiper-button-disabled:hover {
   background-color: transparent;
 }
 #mainPage .swiper-button-prev::after, #mainPage .swiper-button-next::after {
@@ -1606,7 +1613,7 @@ body {
   border-radius: 1.875rem 1.875rem 1.875rem 0;
 }
 #mainPage #keyvision .swiper-wrapper {
-  margin-bottom: -0.5rem;
+  margin-bottom: -0.25rem;
   position: relative;
 }
 #mainPage #keyvision .swiper-button-prev, #mainPage #keyvision .swiper-button-next {
@@ -2450,10 +2457,23 @@ body {
   padding: 7.5rem 3.75rem;
 }
 #mainPage #character .bg::before {
-  content: url(../img/bg/charactors-mask-top.png);
+  top: 0;
+  background-image: url(../img/bg/charactors-mask-top.png);
+  background-position: top center;
 }
 #mainPage #character .bg::after {
-  content: url(../img/bg/zkz-mask-bottom.png);
+  bottom: 0;
+  background-image: url(../img/bg/zkz-mask-bottom.png);
+  background-position: bottom center;
+}
+#mainPage #character .bg::before, #mainPage #character .bg::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 100%;
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
 #mainPage #character .container {
   position: inherit;
