--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -165,22 +165,28 @@ body {
 #mainPage .title-xl {
   font-size: 3.75rem;
 }
-#mainPage h1 {
+#mainPage h1,
+#mainPage .h1 {
   font-size: 2.5rem;
 }
-#mainPage h2 {
+#mainPage h2,
+#mainPage .h2 {
   font-size: 2.125rem;
 }
-#mainPage h3 {
+#mainPage h3,
+#mainPage .h3 {
   font-size: 1.5rem;
 }
-#mainPage h4 {
+#mainPage h4,
+#mainPage .h4 {
   font-size: 1.25rem;
 }
-#mainPage h5 {
+#mainPage h5,
+#mainPage .h5 {
   font-size: 1.125rem;
 }
-#mainPage h6 {
+#mainPage h6,
+#mainPage .h6 {
   font-size: 1rem;
 }
 #mainPage .body-1 {
@@ -211,22 +217,28 @@ body {
   #mainPage .title-xl {
     font-size: 1.875rem;
   }
-  #mainPage h1 {
+  #mainPage h1,
+  #mainPage .h1 {
     font-size: 1.5rem;
   }
-  #mainPage h2 {
+  #mainPage h2,
+  #mainPage .h2 {
     font-size: 1.25rem;
   }
-  #mainPage h3 {
+  #mainPage h3,
+  #mainPage .h3 {
     font-size: 1.125rem;
   }
-  #mainPage h4 {
+  #mainPage h4,
+  #mainPage .h4 {
     font-size: 1rem;
   }
-  #mainPage h5 {
+  #mainPage h5,
+  #mainPage .h5 {
     font-size: 0.9375rem;
   }
-  #mainPage h6 {
+  #mainPage h6,
+  #mainPage .h6 {
     font-size: 0.875rem;
   }
   #mainPage .body-1 {
@@ -275,7 +287,6 @@ body {
 #mainPage input[type=button][disabled],
 #mainPage input[type=submit][disabled],
 #mainPage a.button[disabled] {
-  cursor: not-allowed;
   background-color: #3a3a3a;
   color: #757575;
 }
@@ -337,8 +348,8 @@ body {
 #mainPage input[type=submit].btn-rounded[disabled],
 #mainPage a.button.btn-tertiary[disabled],
 #mainPage a.button.btn-rounded[disabled] {
-  border-color: #757575;
-  color: #757575;
+  border-color: rgba(255, 255, 255, 0.3);
+  color: rgba(255, 255, 255, 0.3);
   background-color: transparent;
 }
 #mainPage button.btn-rounded,
@@ -373,9 +384,8 @@ body {
   font-family: "Icomoon";
   content: "\e900";
 }
-#mainPage .dropdown .dropdown-content {
+#mainPage .dropdown-content {
   position: absolute;
-  top: calc(100% + 1.75rem);
   left: 50%;
   transform: translateX(-50%);
   width: 10rem;
@@ -392,21 +402,21 @@ body {
   transition-property: max-height, padding, opacity;
 }
 @media (max-width: 1024px) {
-  #mainPage .dropdown .dropdown-content {
+  #mainPage .dropdown-content {
     font-size: 0.8125rem;
   }
 }
-#mainPage .dropdown .dropdown-content > ul {
+#mainPage .dropdown-content > ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 0.5rem;
 }
-#mainPage .dropdown .dropdown-content > ul > li {
+#mainPage .dropdown-content > ul > li {
   flex: 100%;
   text-align: center;
 }
-#mainPage .dropdown .dropdown-content > ul > li > a {
+#mainPage .dropdown-content > ul > li > a {
   display: block;
   color: white;
   border-radius: 0.625rem;
@@ -414,20 +424,43 @@ body {
   padding: 0.5rem 1.5rem;
 }
 @media (hover: hover) {
-  #mainPage .dropdown .dropdown-content > ul > li:hover > a {
+  #mainPage .dropdown-content > ul > li:hover > a {
     background-color: #9d4043;
   }
 }
-#mainPage .dropdown .dropdown-content > ul > li.active > a {
+#mainPage .dropdown-content > ul > li.active > a {
   background-color: #9d4043;
 }
-#mainPage .dropdown.active button::after {
-  content: "\e903";
+@media (min-width: 1281px) {
+  #mainPage .dropdown-padding {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 10rem;
+    z-index: 2;
+  }
+  #mainPage .dropdown:hover button::after {
+    content: "\e903";
+  }
+  #mainPage .dropdown:hover .dropdown-padding {
+    padding-top: 1.75rem;
+  }
+  #mainPage .dropdown:hover .dropdown-content {
+    padding: 1.75rem 1.25rem;
+    max-height: 18.75rem;
+    opacity: 1;
+  }
 }
-#mainPage .dropdown.active .dropdown-content {
-  padding: 1.75rem 1.25rem;
-  max-height: 18.75rem;
-  opacity: 1;
+@media (max-width: 1280px) {
+  #mainPage .dropdown.active button::after {
+    content: "\e903";
+  }
+  #mainPage .dropdown.active .dropdown-content {
+    padding: 1.75rem 1.25rem;
+    max-height: 18.75rem;
+    opacity: 1;
+  }
 }
 @media (max-width: 1280px) {
   #mainPage .fulldown .fulldown-content {
@@ -769,7 +802,6 @@ body {
   flex-wrap: wrap;
   gap: 1rem;
   color: white;
-  width: 30rem;
 }
 #mainPage #login ul li {
   flex: 100%;
@@ -1012,15 +1044,21 @@ body {
   z-index: 2;
   border-radius: 6.25rem;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: -1.375rem;
+  cursor: pointer;
 }
 #mainPage .swiper-button-prev:hover, #mainPage .swiper-button-next:hover {
   background-color: rgba(255, 255, 255, 0.15);
 }
-#mainPage .swiper-button-prev[disabled], #mainPage .swiper-button-prev.slick-disabled, #mainPage .swiper-button-next[disabled], #mainPage .swiper-button-next.slick-disabled {
-  color: #3a3a3a;
+#mainPage .swiper-button-prev[disabled], #mainPage .swiper-button-prev.slick-disabled, #mainPage .swiper-button-prev.swiper-button-disabled, #mainPage .swiper-button-next[disabled], #mainPage .swiper-button-next.slick-disabled, #mainPage .swiper-button-next.swiper-button-disabled {
+  opacity: 0.35;
+  pointer-events: none;
   cursor: default;
 }
-#mainPage .swiper-button-prev[disabled]:hover, #mainPage .swiper-button-prev.slick-disabled:hover, #mainPage .swiper-button-next[disabled]:hover, #mainPage .swiper-button-next.slick-disabled:hover {
+#mainPage .swiper-button-prev[disabled]:hover, #mainPage .swiper-button-prev.slick-disabled:hover, #mainPage .swiper-button-prev.swiper-button-disabled:hover, #mainPage .swiper-button-next[disabled]:hover, #mainPage .swiper-button-next.slick-disabled:hover, #mainPage .swiper-button-next.swiper-button-disabled:hover {
   background-color: transparent;
 }
 #mainPage .swiper-button-prev::after, #mainPage .swiper-button-next::after {
@@ -1327,10 +1365,6 @@ body {
   font-family: "Icomoon";
   content: "\e900";
 }
-#mainPage header .login .admin.active button::after {
-  font-family: "Icomoon";
-  content: "\e903";
-}
 #mainPage header.fixed {
   border-radius: 6.25rem;
   top: 1.25rem;
@@ -1359,6 +1393,11 @@ body {
     top: 1.25rem;
     left: 2.5rem;
     right: 2.5rem;
+  }
+}
+@media (min-width: 1281px) {
+  #mainPage header .login .admin:hover button::after {
+    content: "\e903";
   }
 }
 @media (max-width: 1280px) {
@@ -1395,6 +1434,10 @@ body {
     padding: 0.625rem 1.25rem;
     border: none !important;
     line-height: 1 !important;
+  }
+  #mainPage header .login .admin.active button::after {
+    font-family: "Icomoon";
+    content: "\e903";
   }
   #mainPage header .dropdown button {
     width: 100%;
@@ -1462,7 +1505,7 @@ body {
 #mainPage .breadcrumb li:not(:last-child)::after {
   font-family: "Icomoon";
   content: "\e902";
-  padding-left: 0.25rem;
+  padding: 0 0.25rem;
 }
 @media (max-width: 516px) {
   #mainPage .breadcrumb {
@@ -1569,7 +1612,7 @@ body {
   border-radius: 1.875rem 1.875rem 1.875rem 0;
 }
 #mainPage #keyvision .swiper-wrapper {
-  margin-bottom: -0.5rem;
+  margin-bottom: -0.25rem;
   position: relative;
 }
 #mainPage #keyvision .swiper-button-prev, #mainPage #keyvision .swiper-button-next {
@@ -2403,6 +2446,216 @@ body {
     height: 8.75rem;
   }
 }
+#mainPage #character {
+  background-image: url(../img/bg/character-bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  position: relative;
+  padding: 7.5rem 3.75rem;
+}
+#mainPage #character .bg::before {
+  top: 0;
+  background-image: url(../img/bg/charactors-mask-top.png);
+  background-position: top center;
+}
+#mainPage #character .bg::after {
+  bottom: 0;
+  background-image: url(../img/bg/zkz-mask-bottom.png);
+  background-position: bottom center;
+}
+#mainPage #character .bg::before, #mainPage #character .bg::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 100%;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+#mainPage #character .container {
+  position: inherit;
+  z-index: 2;
+}
+#mainPage #character .container .h1 {
+  color: #e9e9e9;
+}
+#mainPage #character .container > ul {
+  margin-top: 5rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3rem 3.5rem;
+}
+#mainPage #character .container > ul > li {
+  flex: calc((100% - 14rem) / 5);
+  max-width: calc((100% - 14rem) / 5);
+  margin-top: calc(((100% - 14rem) / 5 - 3.75rem) * 0.6);
+  padding: 2rem;
+  padding-top: calc(((100% - 14rem) / 5 - 3.75rem) * 0.4 + 1.25rem);
+  background-color: black;
+  border-radius: 1rem;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+@media (max-width: 1440px) {
+  #mainPage #character .container > ul > li {
+    border-radius: 1.1111111111svw;
+  }
+}
+@media (max-width: 768px) {
+  #mainPage #character .container > ul > li {
+    border-radius: 0.875rem;
+  }
+}
+#mainPage #character .container > ul > li img {
+  position: absolute;
+  width: calc(100% - 3.75rem);
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -60%);
+  border-radius: 18.75rem;
+}
+@media (max-width: 1440px) {
+  #mainPage #character .container > ul > li img {
+    border-radius: 20.8333333333svw;
+  }
+}
+@media (max-width: 768px) {
+  #mainPage #character .container > ul > li img {
+    border-radius: 18.75rem;
+  }
+}
+#mainPage #character .container > ul > li h4 {
+  margin-bottom: 1.25rem;
+}
+#mainPage #character .container > ul > li h4 span {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  background-color: #871B1F;
+  border-radius: 0.375rem;
+}
+@media (max-width: 1440px) {
+  #mainPage #character .container > ul > li h4 span {
+    border-radius: 0.4166666667svw;
+  }
+}
+@media (max-width: 768px) {
+  #mainPage #character .container > ul > li h4 span {
+    border-radius: 0.375rem;
+  }
+}
+#mainPage #character .container > ul > li dl {
+  width: 100%;
+  font-size: 0.9375rem;
+  line-height: 1.5;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.5rem 0;
+}
+@media (max-width: 1024px) {
+  #mainPage #character .container > ul > li dl {
+    font-size: 0.8125rem;
+  }
+}
+#mainPage #character .container > ul > li dl dt {
+  display: inline-block;
+  flex: 45%;
+}
+#mainPage #character .container > ul > li dl dd {
+  text-align: right;
+  flex: 55%;
+  display: flex;
+  gap: 0.25rem;
+  align-items: center;
+  justify-content: flex-end;
+}
+#mainPage #character .container > ul > li.protoss dl dd {
+  color: #D49519;
+}
+#mainPage #character .container > ul > li.demigod dl dd {
+  color: #b36568;
+}
+#mainPage #character .container > ul > li.terran dl dd {
+  color: #4D9D40;
+}
+@media (max-width: 1440px) {
+  #mainPage #character .container > ul {
+    gap: 3rem 2.25rem;
+  }
+  #mainPage #character .container > ul > li {
+    flex: calc((100% - 9rem) / 5);
+    max-width: calc((100% - 9rem) / 5);
+    margin-top: calc(((100% - 9rem) / 5 - 3.75rem) * 0.6);
+    padding: 1.25rem;
+    padding-top: calc(((100% - 9rem) / 5 - 3.75rem) * 0.4 + 1.25rem);
+  }
+}
+@media (max-width: 1280px) {
+  #mainPage #character .container > ul {
+    gap: 3rem 2.25rem;
+  }
+  #mainPage #character .container > ul > li {
+    flex: calc((100% - 6.75rem) / 4);
+    max-width: calc((100% - 6.75rem) / 4);
+    margin-top: calc(((100% - 6.75rem) / 4 - 3.75rem) * 0.6);
+    padding-top: calc(((100% - 6.75rem) / 4 - 3.75rem) * 0.4 + 1.25rem);
+  }
+}
+@media (max-width: 1024px) {
+  #mainPage #character {
+    padding: 3.75rem 1rem;
+  }
+  #mainPage #character .container {
+    margin-top: 3.75rem;
+  }
+  #mainPage #character .container > ul {
+    gap: 3rem 2.25rem;
+  }
+  #mainPage #character .container > ul > li {
+    flex: calc((100% - 4.5rem) / 3);
+    max-width: calc((100% - 4.5rem) / 3);
+    margin-top: calc(((100% - 4.5rem) / 3 - 3.75rem) * 0.6);
+    padding: 1.75rem;
+    padding-top: calc(((100% - 4.5rem) / 3 - 3.75rem) * 0.4 + 1.25rem);
+  }
+}
+@media (max-width: 768px) {
+  #mainPage #character {
+    background-image: url(../img/bg/character-bg-m.jpg);
+    background-size: 100%;
+  }
+  #mainPage #character .container > ul {
+    gap: 2rem 1rem;
+  }
+  #mainPage #character .container > ul > li {
+    flex: calc((100% - 1rem) / 2);
+    max-width: calc((100% - 1rem) / 2);
+    margin-top: calc(((100% - 1rem) / 2 - 3rem) * 0.6);
+    padding: 1.5rem;
+    padding-top: calc(((100% - 1rem) / 2 - 3rem) * 0.4 + 1.25rem);
+  }
+  #mainPage #character .container > ul > li img {
+    max-width: calc(100% - 3rem);
+  }
+}
+@media (max-width: 516px) {
+  #mainPage #character .container > ul {
+    margin-top: 3.75rem;
+  }
+  #mainPage #character .container > ul > li {
+    padding: 0.75rem;
+    padding-top: calc(((100% - 1rem) / 2 - 3rem) * 0.4 + 1rem);
+  }
+  #mainPage #character .container > ul > li img {
+    max-width: calc(100% - 1.5rem);
+  }
+}
 #mainPage footer {
   background-color: black;
   height: 7.5rem;
@@ -2920,72 +3173,70 @@ body {
   max-width: 25%;
   border-radius: 1.875rem;
   overflow: hidden;
-}
-@media (max-width: 1440px) {
-  #mainPage #game .game-list > li {
-    border-radius: 2.0833333333svw;
-  }
-}
-@media (max-width: 768px) {
-  #mainPage #game .game-list > li {
-    border-radius: 0.9375rem;
-  }
-}
-#mainPage #game .game-list > li > a {
   padding: 1.75rem;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   background-color: rgba(0, 0, 0, 0);
   transition-property: background-color;
   transition-duration: 0.3s;
+  cursor: pointer;
 }
-#mainPage #game .game-list > li > a .img {
+@media (max-width: 1440px) {
+  #mainPage #game .game-list > li {
+    border-radius: 2.0833333333svw;
+  }
+}
+@media (max-width: 768px) {
+  #mainPage #game .game-list > li {
+    border-radius: 0.9375rem;
+  }
+}
+#mainPage #game .game-list > li .img {
   margin-bottom: 1.25rem;
   border-radius: 1.875rem;
   overflow: hidden;
 }
 @media (max-width: 1440px) {
-  #mainPage #game .game-list > li > a .img {
+  #mainPage #game .game-list > li .img {
     border-radius: 2.0833333333svw;
   }
 }
 @media (max-width: 768px) {
-  #mainPage #game .game-list > li > a .img {
+  #mainPage #game .game-list > li .img {
     border-radius: 0.9375rem;
   }
 }
-#mainPage #game .game-list > li > a .img img {
+#mainPage #game .game-list > li .img img {
   margin-bottom: -0.1875rem;
   border-radius: 1.875rem;
   transition-property: transform;
   transition-duration: 0.3s;
 }
 @media (max-width: 1440px) {
-  #mainPage #game .game-list > li > a .img img {
+  #mainPage #game .game-list > li .img img {
     border-radius: 2.0833333333svw;
   }
 }
 @media (max-width: 768px) {
-  #mainPage #game .game-list > li > a .img img {
+  #mainPage #game .game-list > li .img img {
     border-radius: 0.9375rem;
   }
 }
-#mainPage #game .game-list > li > a .tags {
+#mainPage #game .game-list > li .img .tags {
   margin: 1rem 0 2.5rem;
 }
-#mainPage #game .game-list > li > a .btn {
+#mainPage #game .game-list > li .img .btn {
   flex-grow: 1;
   display: flex;
   align-items: flex-end;
 }
 @media (hover: hover) {
-  #mainPage #game .game-list > li > a:hover {
+  #mainPage #game .game-list > li .img:hover {
     background-color: black;
     transition-duration: 0.7s;
   }
-  #mainPage #game .game-list > li > a:hover .img img {
+  #mainPage #game .game-list > li .img:hover .img img {
     transform: scale(1.1);
   }
 }
@@ -3105,7 +3356,17 @@ body {
 }
 #mainPage #game .game-detail .content .odd-n-bet .odds label {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  font-size: 1.125rem;
+  line-height: 1.5;
+}
+@media (max-width: 1024px) {
+  #mainPage #game .game-detail .content .odd-n-bet .odds label {
+    font-size: 0.9375rem;
+  }
+}
+#mainPage #game .game-detail .content .odd-n-bet .odds label i {
+  transform: translate(0, 0.25rem);
 }
 #mainPage #game .game-detail .content .odd-n-bet .odds h3 {
   margin: 1.5rem 0;
@@ -3265,6 +3526,18 @@ body {
   #mainPage #game .game-detail .img {
     flex: 100%;
     max-width: 100%;
+  }
+  #mainPage #game .game-detail .content .odd-n-bet {
+    gap: 1rem;
+    flex-wrap: wrap;
+  }
+  #mainPage #game .game-detail .content .odd-n-bet .odds,
+  #mainPage #game .game-detail .content .odd-n-bet .bets {
+    flex: 100%;
+    max-width: 100%;
+  }
+  #mainPage #game .game-detail .content .odd-n-bet .odds {
+    order: 2;
   }
   #mainPage #game .game-detail .content .desc {
     order: 2;
