--- a/pre/scss/pages/_game.scss
+++ b/pre/scss/pages/_game.scss
@@ -18,28 +18,25 @@
             max-width: 25%;
             @include radius;
             overflow: hidden;
+            padding: size(28);
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            background-color: rgba(black, 0);
+            transition-property: background-color;
+            transition-duration: .3s;
+            cursor: pointer;
 
-            >a {
-                padding: size(28);
-                height: 100%;
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                background-color: rgba(black, 0);
-                transition-property: background-color;
-                transition-duration: .3s;
+            .img {
+                margin-bottom: size(20);
+                @include radius;
+                overflow: hidden;
 
-                .img {
-                    margin-bottom: size(20);
+                img {
+                    margin-bottom: size(-3);
                     @include radius;
-                    overflow: hidden;
-
-                    img {
-                        margin-bottom: size(-3);
-                        @include radius;
-                        transition-property: transform;
-                        transition-duration: .3s;
-                    }
+                    transition-property: transform;
+                    transition-duration: .3s;
                 }
 
                 .tags {
@@ -192,7 +189,12 @@
 
                     label {
                         display: flex;
-                        align-items: center;
+                        align-items: flex-start;
+                        @include body-1;
+
+                        i {
+                            transform: translate(0, size(4));
+                        }
                     }
 
                     h3 {
@@ -424,6 +426,21 @@
             }
 
             .content {
+                .odd-n-bet {
+                    gap: size(16);
+                    flex-wrap: wrap;
+
+                    .odds,
+                    .bets {
+                        flex: 100%;
+                        max-width: 100%;
+                    }
+
+                    .odds {
+                        order: 2;
+                    }
+                }
+
                 .desc {
                     order: 2;
                 }
