--- a/pre/scss/pages/_game-play.scss
+++ b/pre/scss/pages/_game-play.scss
@@ -7,7 +7,7 @@
     background-position: center;
     position: relative;
     height: calc((size(1440) - size(28)*2) * .6 * .6);
-    // (container - card padding) * game-zone flex * height ratio
+    // 算式：(container - card padding) * game-zone flex * height ratio
 
     .default {
         height: 100%;
@@ -193,14 +193,15 @@
         .popUp--container {
             .popUp--content {
                 text-align: center;
-                min-width: calc((size(1440) - size(28)*2) * .6 * .5);
-                // (container - card padding) * game-zone flex * 50%
+                min-width: calc((size(1440) - size(28) * 2) * .6 * .5);
+                // 算式：(container - card padding) * game-zone flex * 50%
             }
         }
     }
 
     &.MTP,
-    &.PSS {
+    &.PSS,
+    &.MC {
         .play-game {
             .game-content {
                 .selection {
@@ -324,18 +325,197 @@
         }
     }
 
+    &.MC {
+        .play-game {
+            .game-content {
+                .result {
+                    position: relative;
+
+                    .wheel {
+                        width: calc(((size(1440) - size(28) * 2) * .6 * (.6 - .2)));
+                        height: calc(((size(1440) - size(28) * 2) * .6 * (.6 - .2)));
+                        // 算式：(container - card padding) * game-zone flex * (height ratio - selection)
+                        position: absolute;
+                        top: size(36);
+                        left: 50%;
+                        transform: translate(-50%, 0);
+
+                        &Body {
+                            position: relative;
+                            width: 100%;
+                            padding-bottom: 100%;
+                            border-radius: 50%;
+                            overflow: hidden;
+                            margin: 0 auto;
+
+                            .hand {
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                right: 0;
+                                bottom: 0;
+                                margin: auto;
+                                width: 20%;
+                                height: 20%;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                transition: transform 3s;
+                                border-radius: 50%;
+                                z-index: 8;
+
+                                img {
+                                    position: absolute;
+                                    top: -70%;
+                                    left: -7.5%;
+                                    width: 125%;
+                                    transform: rotate(190deg);
+                                }
+                            }
+
+                            .pattern {
+                                position: absolute;
+                                top: 0;
+                                right: 0;
+                                width: 100%;
+                                height: 100%;
+                                clip-path: polygon(50% 0%, 100% 0%, 100% 100%, 50% 100%);
+
+                                .inner {
+                                    position: absolute;
+                                    top: 0;
+                                    left: 0;
+                                    width: 50%;
+                                    height: 100%;
+                                    transform-origin: right center;
+                                    background-image: url(../img/game/MC/pattern1.jpg);
+                                    background-size: cover;
+                                    background-repeat: no-repeat;
+                                }
+
+                                &.picked {
+                                    .inner {
+                                        &::after {
+                                            content: '';
+                                            position: absolute;
+                                            top: 0;
+                                            left: 0;
+                                            right: 0;
+                                            bottom: 0;
+                                            animation: flash 1s linear .5s forwards;
+                                            opacity: .5;
+                                        }
+                                    }
+                                }
+
+                                &:nth-child(2n) {
+                                    .inner {
+                                        background-image: url(../img/game/MC/pattern2.jpg);
+
+                                        &::after {
+                                            opacity: 1;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+
+                        &Content {
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            width: 100%;
+                            padding-bottom: 100%;
+
+                            .inner {
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                width: 100%;
+                                height: 100%;
+                                display: flex;
+                                align-items: center;
+                                flex-direction: column;
+                                padding-top: size(16);
+
+                                img {
+                                    max-width: 15%;
+                                }
+
+                                &.picked {
+                                    img {
+                                        animation: bounce 1s linear .5s forwards;
+                                    }
+                                }
+                            }
+                        }
+
+                        &::after {
+                            content: '';
+                            position: absolute;
+                            top: -25%;
+                            left: -25%;
+                            right: -25%;
+                            bottom: -25%;
+                            background-image: url(../img/game/MC/wheelFrame.png);
+                            background-size: 100%;
+                            background-position: center;
+                            background-repeat: no-repeat;
+                        }
+                    }
+
+                    img {
+                        animation: none;
+                    }
+                }
+
+                .selection {
+                    padding: size(20) size(24);
+
+                    div {
+                        padding: size(4) size(8);
+
+                        label {
+                            padding: size(4) size(16);
+
+                            img {
+                                &.item {
+                                    max-height: size(52);
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
 
     // pc ~ 1440
     @include max-to(pc) {
         height: calc((100svw - size(60)*2 - size(28)*2) * .6 * .6);
-        // (window width - section padding - card padding) * game-zone flex * height ratio
+        // 算式：(window width - section padding - card padding) * game-zone flex * height ratio
+
+        &.MC {
+            .play-game {
+                .game-content {
+                    .result {
+                        .wheel {
+                            width: calc(((100svw - size(60)*2 - size(28) * 2) * .6 * (.6 - .2)));
+                            height: calc(((100svw - size(60)*2 - size(28) * 2) * .6 * (.6 - .2)));
+                            // 算式：(window width - section padding - card padding) * game-zone flex * (height ratio - selection)
+                        }
+                    }
+                }
+            }
+        }
     }
 
 
     // pad ~ 1024
     @include max-to(pad) {
         height: calc((100svw - size(120) - size(56)) * .6);
-        // (window width - section padding - card padding) * height ratio
+        // 算式：(window width - section padding - card padding) * height ratio
 
         .default {
             .game-title {
@@ -374,9 +554,9 @@
             }
         }
 
-
         &.MTP,
-        &.PSS {
+        &.PSS,
+        &.MC {
             .play-game {
                 .game-content {
                     .selection {
@@ -395,12 +575,55 @@
                 }
             }
         }
+
+        &.MC {
+            .play-game {
+                .game-content {
+                    .result {
+                        .wheel {
+                            width: calc((100svw - size(120) - size(56)) * (.6 - .2));
+                            height: calc((100svw - size(120) - size(56)) * (.6 - .2));
+                            // 算式：(window width - section padding - card padding) * (height ratio - selection)
+                        }
+                    }
+
+                    .selection {
+                        div {
+                            label {
+                                padding: size(4) size(16);
+
+                                img {
+                                    &.item {
+                                        max-height: size(40);
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
 
 
     // small-pad ~ 768
     @include max-to(small-pad) {
         height: calc((100svw - size(32) - size(32)) * .6);
+        // 算式：(window width - section padding - card padding) * height ratio
+
+        &.MC {
+            .play-game {
+                .game-content {
+                    .result {
+                        .wheel {
+                            width: calc((100svw - size(32) - size(32)) * (.6 - .2));
+                            height: calc((100svw - size(32) - size(32)) * (.6 - .2));
+                            // 算式：(window width - section padding - card padding) * (height ratio - selection)
+                        }
+                    }
+                }
+            }
+        }
     }
 
 
@@ -418,6 +641,69 @@
             .popUp--container {
                 .popUp--content {
                     min-width: auto;
+                }
+            }
+        }
+
+        .play-game {
+            .game-content {
+                .selection {
+                    padding: size(8) !important;
+                }
+            }
+        }
+
+        &.MTP,
+        &.PSS,
+        &.MC {
+            .play-game {
+                .game-content {
+                    .selection {
+                        div {
+                            gap: size(4);
+
+                            label {
+                                padding: size(8);
+
+                                img {
+                                    &.item {
+                                        max-height: size(24);
+                                    }
+                                }
+                            }
+                        }
+
+                        button {
+                            max-width: size(100);
+                        }
+                    }
+                }
+            }
+        }
+
+        &.IC {
+            .play-game {
+                .game-content {
+                    .selection {
+                        button {
+                            max-width: size(140);
+                        }
+                    }
+                }
+            }
+        }
+
+        &.MC {
+            .play-game {
+                .game-content {
+                    .result {
+                        .wheel {
+                            top: size(32);
+                            width: calc((100svw - size(32) - size(32)) * (.6 - .25));
+                            height: calc((100svw - size(32) - size(32)) * (.6 - .25));
+                            // 算式：(window width - section padding - card padding) * (height ratio - selection)
+                        }
+                    }
                 }
             }
         }
@@ -450,35 +736,25 @@
     }
 }
 
-@keyframes float-2 {
+@keyframes bounce {
     0% {
-        transform: translate(0, 0);
+        transform: scale(1);
     }
 
     25% {
-        transform: translate(0, size(-20));
-    }
-
-    75% {
-        transform: translate(0, size(0));
-    }
-
-    100% {
-        transform: translate(0, 0);
-    }
-}
-
-@keyframes float-3 {
-    0% {
-        transform: translate(0, size(-20));
+        transform: scale(1.2);
     }
 
     50% {
-        transform: translate(0, size(0));
+        transform: scale(1.1);
+    }
+
+    75% {
+        transform: scale(1.3);
     }
 
     100% {
-        transform: translate(0, size(-20));
+        transform: scale(1.2);
     }
 }
 
@@ -497,6 +773,28 @@
 
     75% {
         background-color: rgba(white, .3);
+    }
+
+    100% {
+        background-color: rgba(white, 0);
+    }
+}
+
+@keyframes flash {
+    0% {
+        background-color: rgba(white, 0);
+    }
+
+    25% {
+        background-color: rgba(white, .7);
+    }
+
+    50% {
+        background-color: rgba(white, .3);
+    }
+
+    75% {
+        background-color: rgba(white, .7);
     }
 
     100% {
