--- a/css/bodySetting.css
+++ b/css/bodySetting.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 /* 反白選取樣式 */
 ::-moz-selection {
-  background-color: #e9e9e9;
+  background-color: rgba(255, 255, 255, 0.8);
   color: #6c1619;
 }
 
 ::selection {
-  background-color: #e9e9e9;
+  background-color: rgba(255, 255, 255, 0.8);
   color: #6c1619;
 }
 
